--- a/css/index.css
+++ b/css/index.css
@@ -87,7 +87,7 @@ button {
 
 .info {
     color: var(--text);
-    font-size: 1.25rem;
+    font-size: clamp(1rem, 2vw, 1.5rem);
     line-height: 2rem;
     margin-top: 1vh;
     margin-bottom: 1vh;
