--- a/css/navbar.css
+++ b/css/navbar.css
@@ -13,7 +13,7 @@ nav {
 
 nav > * a {
     font: normal 400 20px/1 "Josefin Sans", sans-serif;
-    font-size: 1rem;
+    font-size: clamp(0.9rem, 2vw, 1.5rem);
     text-decoration: none;
     color: #f0f0f0;
 }
